# perplexity-clone-backend

./: .env.example  .gitignore  main.py  pyproject.toml  requirements.txt  ruff.toml
alembic/: env.py
alembic/versions/: a4ef52ebb6d7_initial_tables.py
src/: app.py  config.py  constants.py
src/database/: __init__.py  base.py  connection.py
src/database/models/: users.py
src/middlewares/: error_handler.py
src/routes/: __init__.py  users.py
src/services/: __init__.py  token.py  users.py
src/utils/: exceptions.py  mixins.py
