[project]
name = "Perplexity-Clone-Backend"
version = "0.1.0"
description = "Perplexity Clone Backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "bcrypt>=5.0.0",
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "langchain-openai>=0.3.31",
    "langgraph>=0.6.6",
    "langgraph-checkpoint-postgres>=2.0.23",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.1.1",
    "sqlalchemy[asyncio]>=2.0.43",
    "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "ruff>=0.13.2",
]

